force-app/main/default/objects/Stripe_Config__mdt/Stripe_Config__mdt.object-meta.xml
<CustomObject>
    <description
  >Stores Stripe API configuration keys for payment processing.</description>
    <label>Stripe Config</label>
    <pluralLabel>Stripe Configs</pluralLabel>
</CustomObject>