force-app/main/default/objects/Stripe_Config__mdt/fields/Free_Shipping_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Free_Shipping_Threshold__c</fullName>
    <label>Free Shipping Threshold (€)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>