force-app/main/default/objects/Stripe_Config__mdt/fields/Publishable_Key__c.field-meta.xml
<CustomField>
    <fullName>Publishable_Key__c</fullName>
    <description
  >Stripe publishable key (pk_test_... or pk_live_...) — safe to expose to the browser.</description>
    <label>Publishable Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>