force-app/main/default/objects/Stripe_Config__mdt/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <description
  >Stripe secret key (sk_test_... or sk_live_...) — server-side only, never exposed to the browser.</description>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>