force-app/main/default/objects/Stripe_Config__mdt/fields/Shipping_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Amount__c</fullName>
    <label>Shipping Amount (€)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>